syntax = "proto3";

package com.digirise.proto;

option java_outer_classname = "GatewayDiscoveryProto";

// import public "src/main/proto/common_structures.proto";
import public "common_structures.proto";

message DeviceInfo {
    string deviceName = 1;
    DeviceType deviceType = 2;
}

message GatewayDiscovery {
    string gatewayName = 1;
    string customerName = 2;
    uint64 customerId = 3;
    string coordinates = 4;
    string location = 5;
    repeated DeviceInfo deviceInfos =6; //Not implemented in the server side code. Maybe good to have for the future.
    string timestamp = 7;
}

// Request sent by gateway gateway/<gatewayId>/info/<uuid>
// GatewayDiscovery message
// Response sent by server
// message DeviceReadingsResponse
